# pcre-demo

./: CMakeLists.txt  main.c
